added contact,experience,faq pages, moved shared components in _components

--- a/cartuning/src/app/_components/pageheader/pageheader.component.css
+++ b/cartuning/src/app/_components/pageheader/pageheader.component.css
@@ -1,7 +1,7 @@
 .background {
     height: 355px; 
     
-    background-image: url('../../assets/page-header.jpg'); 
+    background-image: url('../../../assets/page-header.jpg'); 
     background-repeat: no-repeat; 
     background-size: cover; 
     background-attachment: fixed;
