--- a/cartuning/src/app/footer/footer.component.css
+++ b/cartuning/src/app/footer/footer.component.css
@@ -69,8 +69,8 @@
 
 .footer-icon {
     font-size: 42px; 
-    width: 42px!important;
-    height: 42px!important; 
+    width: 42px;
+    height: 42px; 
     color:#E81C2E;
 
 
