--- a/cartuning/src/app/footer/footer.component.html
+++ b/cartuning/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
 
           <div class='row'>
             <div class='col-lg-3 col-md-6 col-sm-6 text-center footer-icon-col' style="padding:30px">
-              <mat-icon class="footer-icon" aria-hidden="false" aria-label="Example thumbs up SVG icon">home</mat-icon>
+              <mat-icon class="footer-icon" aria-hidden="false" aria-label="Example thumbs up SVG icon">location_on</mat-icon>
               <p style="font-size: 14px;">
                 Dumbrava Timis, Romania
               </p>
