--- a/cartuning/src/app/home/home.component.css
+++ b/cartuning/src/app/home/home.component.css
@@ -54,11 +54,11 @@
    100% {width:0px;}
 }
 
-
+/* 
 .home-container {
-  /* background-color: rgba(0, 0, 0, 0.1); */
-  /* background: linear-gradient(90deg, rgba(170,170,170,0.6951155462184874) 0%, rgba(170,170,170,0.08167016806722693) 80%, rgba(2,0,36,0) 100%); */
-}
+   background-color: rgba(0, 0, 0, 0.1); 
+   background: linear-gradient(90deg, rgba(170,170,170,0.6951155462184874) 0%, rgba(170,170,170,0.08167016806722693) 80%, rgba(2,0,36,0) 100%); 
+} */
 
 
 /* HOME SECTION 1*/
