home logo router link, home logo dissapears if browser width < 700px

--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -4,7 +4,7 @@
 <mat-toolbar style="position: fixed; top: 0; z-index: 99; box-shadow: 0px -3px 8px 0px; background-color: var(--ets-dark);">  
   
   <mat-toolbar-row class="section" style="height: 100px;">
-    <img src="../assets/logocaretrebuie-white-sm.png" style="max-height: 64px;">
+    <img src="../assets/logocaretrebuie-white-sm.png" class='page-logo' routerLink='/home'>
     <div style="flex: 1 1 auto"></div>
     <a mat-button routerLink='home' style="font-weight: bold; color: white;">Home</a>
     <a mat-button routerLink='tune' style="font-weight: bold;  color: white;">Catalog Tuning</a>
