--- a/cartuning/src/app/home/home.component.html
+++ b/cartuning/src/app/home/home.component.html
@@ -119,11 +119,11 @@
                     </div>
                     <div class="col ">
                         <div class='row '>
-                            <span style="font-weight: bolder; font-size: 28px;"> Ne ocupam de orice problema </span>
+                            <span style="font-weight: bolder; font-size: 28px;"> Ai intrebari? Suntem dornici sa-ti raspundem! </span>
                         </div>
                         <br>
                         <div class='row '>
-                            <span> Procesul nostru este unul destul de simplu.</span>
+                            <span> Dar mai intai, arunca o privire peste FAQ.</span>
                         </div>
                         <br>
                         <div class='row'>
