--- a/cartuning/src/app/app.component.css
+++ b/cartuning/src/app/app.component.css
@@ -71,3 +71,15 @@ mat-tab-header {
 .clicked {
     transform: rotate(90deg)
 }
+
+.page-logo {
+    max-height: 64px;
+    outline: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 700px){
+    .page-logo {
+        display: none;
+    }
+}
