--- a/cartuning/src/app/aboutus/faq/faq.component.html
+++ b/cartuning/src/app/aboutus/faq/faq.component.html
@@ -3,10 +3,39 @@
 
     <div class="section">
         <div class="row no-gutter">
-            <div class="col-4">
-                asd
+            <div class="col-lg-4">
+              <mat-card class="example-card">
+                <mat-card-header>
+                  <div mat-card-avatar class="example-header-image"></div>
+                  <mat-card-title style="color:#777">NEED ASSISTANCE ?</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                  <hr>
+                  <div class="row no-gutter"  style=" padding: 20px 0px 20px 52px">
+                    <!-- <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon> -->
+                    <mat-icon class="material-icons-round" style="font-size: 32px; height: 32px; width: 32px;">phone</mat-icon>
+                    <span style="color: #333; font-weight: bold; margin-left: 20px;">
+                          0742-164-800
+                    </span>
+                  </div>
+                  <div class="row no-gutter"  style=" padding: 20px 0px 20px 52px">
+                      <!-- <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon> -->
+                      <mat-icon class="material-icons-round" style="font-size: 32px; height: 32px; width: 32px; padding-top: 4px;">access_time</mat-icon>
+                      <span style="color: #333; margin-left: 20px; ">
+                        <span style="font-weight: bold;">Monday - Saturday</span><br>
+                        07:00 - 22:00
+                      </span>
+                  </div>
+                  <div class="row no-gutter"  style=" padding: 20px 0px 20px 52px">
+                    <!-- <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon> -->
+                    <span style="color: #333; font-weight: bold;">
+                      Contact Us
+                    </span>
+                  </div>
+                </mat-card-content>
+              </mat-card>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8">
                 <mat-accordion>
                     
                     <mat-expansion-panel>
