updated angular cli

--- a/cartuning/src/app/user/place-order/place-order.component.html
+++ b/cartuning/src/app/user/place-order/place-order.component.html
@@ -44,7 +44,10 @@
          <mat-label>ECU</mat-label>
          <input matInput type="text" formControlName='ecu'>
        </mat-form-field>
- 
+
+        <mat-label>Upload</mat-label>
+        <input type="file" formControlName='file'>
+       
      </div>
     
      <div class="form-group" style="margin-top: 20px;">
