--- a/cartuning/src/app/app.component.css
+++ b/cartuning/src/app/app.component.css
@@ -49,8 +49,12 @@ mat-tab-header {
 
 
 .user-btn {
-    appearance: none!important; border-radius: 50%;
-    border: none!important;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    margin-left: 40px;
+    height: 50px;
+    background-color: var(--ets-dark);
+    padding-bottom: 5px;
 }
 
 .outline-none {
