--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -17,7 +17,7 @@
       <a mat-menu-item class='outline-none' routerLink='/about/contact'>Contact</a>
     </mat-menu>
 
-    <button [matMenuTriggerFor]="aboutMenu" #tb='matMenuTrigger' class="user-btn shadow-none outline-none " style="background: transparent!important;">
+    <button [matMenuTriggerFor]="aboutMenu" #tb='matMenuTrigger' class="shadow-none outline-none " style="background: transparent!important;border: none;">
       <span style="font-size: 16px; margin-left: 8px; color: white; font-weight: bold;">About</span>
       <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': tb.menuOpen}">keyboard_arrow_right</mat-icon>
     </button>
@@ -26,15 +26,19 @@
     <mat-menu #accountMenu="matMenu">
       <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' style="font-weight: bold;">{{"Hello, " + accountService.userValue?.firstName}}</a>
       <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/profile'>Account</a>
+      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/profile' style="height: 32px; line-height: 32px;">Account</a>
+      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/orders' style="height: 32px; line-height: 32px;">Orders</a>
+      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/place-order' style="height: 32px; line-height: 32px;">Place Order</a>
+      <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
       <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/home' (click)='logout()'>Logout</a>
       
       <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/account/login">Login</a>
       <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/account/register">Register</a>
     </mat-menu>
       
-    <button [matMenuTriggerFor]="accountMenu" #ta='matMenuTrigger' class="user-btn shadow-none outline-none " style="background: transparent!important; margin-left: 40px; ">
-      <img src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'assets/testimonials.jpg')}} " style="width: 42px; height: 42px; border-radius: 50%;">
+    <button [matMenuTriggerFor]="accountMenu" #ta='matMenuTrigger' class="user-btn shadow-none outline-none">
+      <img *ngIf="accountService.userValue?.avatar" src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'keyboard_arrow_right')}} " style="width: 24px; height: 24px; border-radius: 50%;">
+      <mat-icon *ngIf="!accountService.userValue?.avatar" class="align-middle" style="color: white;">account_circle</mat-icon>
       <span style="font-size: 16px; margin-left: 8px; color: white;">{{accountService.userValue ? accountService.userValue.username : "My Account"}}</span>
       <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': ta.menuOpen}">keyboard_arrow_right</mat-icon>
     </button>
