--- a/cartuning/src/styles.css
+++ b/cartuning/src/styles.css
@@ -19,8 +19,10 @@ body {
 }
 
 *:not(mat-icon) {
-    font-family:"Segoe UI","Roboto","Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji", sans-serif !important; 
+    /* font-family:"Segoe UI","Roboto","Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji", sans-serif !important;  */
     /* Add !important to overwrite all elements */
+    font-family: "Verdana","Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    
   }
 
 ::-webkit-scrollbar {
