added gallery component

--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -8,6 +8,7 @@
     <div style="flex: 1 1 auto"></div>
     <a mat-button routerLink='home' style="font-weight: bold; color: white;">Home</a>
     <a mat-button routerLink='tune' style="font-weight: bold;  color: white;">Catalog Tuning</a>
+    <a mat-button routerLink='gallery' style="font-weight: bold; color: white;">Gallery</a>
     <!-- <a mat-button routerLink='about' style="font-weight: bold; color: white;">About</a> -->
 
 
